style: corrected spacing offer css file

--- a/assets/css/offer.css
+++ b/assets/css/offer.css
@@ -1,13 +1,16 @@
 #offer-section{
-  width: 100vw;
-  height: 40px;
+  width: 100%;
+  height: 4rem;
 
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-
   padding: 0rem 6.7rem;
   
   background-color: #F0DACD;
+}
+
+#offer-section > p {
+  line-height: 1.2rem;
 }
